Link the recipes pages to index
filled the recipes html boilerplate and linked them to their matching elements in index

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 <body>
     <h1>Algerian Cuisin Recipes</h1>
     <h2>The most famous recipes from the Algerian cuisin, covering both main plates and deserts</h2>
-    <img alt="The Algerian flag">
+    <img src="img/flag.jpg" alt="The Algerian flag">
 
 
     <u><h3>Main Dishs:</h3></u>
         <ul>
-            <a><li>Cous Cous</li></a>
-            <a><li>Shourba</li></a>
+            <a href="./recipes/couscous.html"><li>Cous Cous</li></a>
+            <a href="./recipes/shourba.html"><li>Shourba</li></a>
         </ul>
 
     <u><h3>Desert Plates:</h3></u>
         <ul>
-            <a><li>Rfis</li></a>
-            <a><li>Magroudh</li></a>
+            <a href="./recipes/rfis.html"><li>Rfis</li></a>
+            <a href="./recipes/magroudh.html"><li>Magroudh</li></a>
         </ul>
-        
+
 </body>
 </html>
