Filled in the recipes pages, corrected mistakes
corrected some typing errors and improved the arrangment of elements

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>All Recipes</title>
 </head>
 <body>
-    <h1>Algerian Cuisin Recipes</h1>
-    <h2>The most famous recipes from the Algerian cuisin, covering both main plates and deserts</h2>
+    <h1>Recipes:</h1>
+    <h2></h2>
     <img src="img/flag.jpg" alt="The Algerian flag">
 
 
@@ -18,7 +18,7 @@
 
     <u><h3>Desert Plates:</h3></u>
         <ul>
-            <a href="./recipes/rfis.html"><li>Rfis</li></a>
+            <a href="./recipes/rfiss.html"><li>Rfiss</li></a>
             <a href="./recipes/magroudh.html"><li>Magroudh</li></a>
         </ul>
 
