--- a/recipes/couscous.html
+++ b/recipes/couscous.html
@@ -6,8 +6,37 @@
 </head>
 <body>
     <h1>Cous Cous</h1>
+    <p>Couscous is a staple dish in North African countries such as Morocco, Algeria, and Tunisia. Originating from these regions, couscous is made from steamed semolina grains, known for its fluffy texture and nutty flavor.</p>
     <img src="../img/couscous.jpg" alt="photo of a traditional cous cous">
     
-
+    <u><h3>Ingedients:</h3></u>
+    <ul>
+        <li>1 cup couscous</li>
+        <li>one and half cup vegetable broth or water</li>
+        <li>1 tablespoon olive oil</li>
+        <li>1 onion, diced</li>
+        <li>2 cloves garlic, minced</li>
+        <li>1 carrot, diced</li>
+        <li>1 zucchini, diced</li>
+        <li>1 bell pepper, diced</li>
+        <li>half teaspoon ground cumin </li>
+        <li>half teaspoon ground coriander</li>
+        <li>half teaspoon paprika</li>
+        <li>salt and pepper to taste</li>
+        <li>fresh cilantro or parsley for garnish (optional)</li>
+    </ul>
+    <u><h3>Steps:</h3></u>
+    <ol>
+        <li>in a medium-sized pot, heat the olive oil over medium heat.</li>
+        <li>add the diced onion and minced garlic to the pot. <br> cook for a few minutess until the vegetables begin to soften</li>
+        <li>add the diced carrot, zucchini, and bell pepper to the pot</li>
+        <li>sprinkle the ground cumin, coriander, and paprika over the vegetables. stir well.</li>
+        <li>pour the vegetable broth or water into the pot and bring it to a boil.</li>
+        <li>once the liquid is boiling, add the couscous to the pot. stir well.</li>
+        <li>reduce the heat to low, cover the pot with a lid, and let it simmer for about 10 minutes or until the cous cous has absorbed the liquid and become tender</li>
+        <li>remove the pot from heat and and fluff the couscous with a fork</li>
+        <li>taste and season with salt and pepper as needed</li>
+        <li>serve the Couscous hot, garnished with fresh cilantro or parsley if desired.</li>
+    </ol>
 </body>
 </html>
