--- a/recipes/shourba.html
+++ b/recipes/shourba.html
@@ -5,9 +5,38 @@
     <title>Shourba</title>
 </head>
 <body>
-    <h1>Cous Cous</h1>
+    <h1>Shourba</h1>
+    <p>Shourba is a traditional North African soup made with vegetables, aromatic spices, and often enriched with proteins like chicken or lamb.</p>
     <img src="../img/shourba.jpg" alt="photo of a traditional shourba">
     
 
+
+    <u><h3>Ingedients:</h3></u>
+    <ul>
+        <li>1 onion, finely chopped</li>
+        <li>2 cloves of garlic, minced</li>
+        <li>2 tablespoons olive oil</li>
+        <li>1 carrot, diced</li>
+        <li>1 potato, diced</li>
+        <li>1 tomato, diced</li>
+        <li>1 teaspoon ground cumin</li>
+        <li>1 teaspoon ground coriander</li>
+        <li>1 teaspoon paprika</li>
+        <li>Salt and pepper to taste</li>
+        <li>4 cups vegetable or chicken broth</li>
+        <li>Fresh cilantro or parsley for garnish (optional)</li>
+    </ul>
+    <u><h3>Steps:</h3></u>
+    <ol>
+        <li>Heat the olive oil in a large pot over medium heat.</li>
+        <li>Add the chopped onion and minced garlic to the pot. Sauté until the onion becomes translucent and fragrant.</li>
+        <li>Add the diced carrot, potato, and tomato to the pot. Stir and cook for a few minutes until the vegetables start to soften.</li>
+        <li>Sprinkle the ground cumin, coriander, paprika, salt, and pepper over the vegetables. Stir well to coat the vegetables with the spices.</li>
+        <li>Pour the vegetable or chicken broth into the pot. Bring the mixture to a boil.</li>
+        <li>Reduce the heat to low, cover the pot, and let the soup simmer for about 20-25 minutes, or until the vegetables are tender.</li>
+        <li>Once the soup is cooked, use an immersion blender or a regular blender to puree the soup until smooth. Be careful when blending hot liquids.</li>
+        <li>Taste the soup and adjust the seasoning if needed.</li>
+        <li> the shourba hot, garnished with fresh cilantro or parsley if desired.</li>
+    </ol>
 </body>
 </html>
