Add photos and tweek the content and fix typos
added photos to img and changed magroudh to makroudh plus fixing some typos

--- a/recipes/couscous.html
+++ b/recipes/couscous.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <h1>Cous Cous</h1>
-    <p>Couscous is a staple dish in North African countries such as Morocco, Algeria, and Tunisia. Originating from these regions, couscous is made from steamed semolina grains, known for its fluffy texture and nutty flavor.</p>
+    <p>Couscous is a staple dish in North African countries such as Algeria, Morocco, and Tunisia. Originating from these regions, couscous is made from steamed semolina grains, known for its fluffy texture and nutty flavor.</p>
     <img src="../img/couscous.jpg" alt="photo of a traditional cous cous">
-    
+
     <u><h3>Ingedients:</h3></u>
     <ul>
         <li>1 cup couscous</li>
