--- a/recipes/shourba.html
+++ b/recipes/shourba.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Shourba</h1>
-    <p>Shourba is a traditional North African soup made with vegetables, aromatic spices, and often enriched with proteins like chicken or lamb.</p>
+    <p>Shourba is a traditional Algerian soup made with vegetables, aromatic spices, and often enriched with proteins like chicken or lamb.</p>
     <img src="../img/shourba.jpg" alt="photo of a traditional shourba">
     
 
