--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>All Recipes</title>
 </head>
 <body>
-    <h1>Recipes:</h1>
-    <h2></h2>
+    <h1>Recipes form Algeria</h1>
+    <h2>These are the most popular and delicious recipes from the algerian cuisine</h2>
     <img src="img/flag.jpg" alt="The Algerian flag">
 
 
@@ -19,7 +19,7 @@
     <u><h3>Desert Plates:</h3></u>
         <ul>
             <a href="./recipes/rfiss.html"><li>Rfiss</li></a>
-            <a href="./recipes/magroudh.html"><li>Magroudh</li></a>
+            <a href="./recipes/makroudh.html"><li>Makroudh</li></a>
         </ul>
 
 </body>
