Applied css changes, the style needed html mods

--- a/index.html
+++ b/index.html
@@ -3,24 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>All Recipes</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <h1>Recipes form Algeria</h1>
     <h2>These are the most popular and delicious recipes from the algerian cuisine</h2>
     <img src="img/flag.jpg" alt="The Algerian flag">
 
+    <div class="menu">
+        <div class="food">
+            <u><h3 >Main Dishs:</h3></u>
+                <ul>
+                    <a href="./recipes/couscous.html" class="anchor"><li>Cous Cous</li></a><br>
+                    <a href="./recipes/shourba.html" class="anchor"><li>Shourba</li></a>
+                </ul>
+        </div>
 
-    <u><h3>Main Dishs:</h3></u>
-        <ul>
-            <a href="./recipes/couscous.html"><li>Cous Cous</li></a>
-            <a href="./recipes/shourba.html"><li>Shourba</li></a>
-        </ul>
-
-    <u><h3>Desert Plates:</h3></u>
-        <ul>
-            <a href="./recipes/rfiss.html"><li>Rfiss</li></a>
-            <a href="./recipes/makroudh.html"><li>Makroudh</li></a>
-        </ul>
-
+        <div class="food">
+        <u><h3>Dessert Plates:</h3></u>
+            <ul>
+                <a href="./recipes/rfiss.html" class="anchor"><li>Rfiss</li></a><br>
+                <a href="./recipes/makroudh.html" class="anchor"><li>Makroudh</li></a>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
