--- a/recipes/makroudh.html
+++ b/recipes/makroudh.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Makroudh</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Makroudh</h1>
@@ -10,29 +11,35 @@
     <img src="../img/makroudh.jpg" alt="photo of a traditional Makroudh">
     
     <u><h3>Ingedients:</h3></u>
-    <ul>
-        <li>2 cups semolina (fine)</li>
-        <li>1/2 cup vegetable oil</li>
-        <li>1/2 cup clarified butter (melted)</li>
-        <li>1/4 cup orange blossom water</li>
-        <li>1/4 cup rose water</li>
-        <li>1/4 teaspoon salt</li>
-        <li>1 cup pitted dates</li>
-        <li> oil (for frying)</li>
+    <ul class="ingredients-container">
+        <div class="ingredients">
+            <li>2 cups semolina (fine)</li>
+            <li>1/2 cup vegetable oil</li>
+            <li>1/2 cup clarified butter (melted)</li>
+            <li>1/4 cup orange blossom water</li>
+        </div>
+        <div class="ingredients">
+            <li>1/4 cup rose water</li>
+            <li>1/4 teaspoon salt</li>
+            <li>1 cup pitted dates</li>
+            <li> oil (for frying)</li>
+        </div>
     </ul>
     <u><h3>Steps:</h3></u>
-    <ol>
-        <li>In a mixing bowl, combine the semolina, vegetable oil, clarified butter, orange blossom water, rose water, and salt. Mix well until the dough is formed.</li>
-        <li>Knead the dough for about 5-10 minutes until it becomes smooth and pliable.</li>
-        <li>Divide the dough into smaller portions and shape each portion into a small rectangle.</li>
-        <li>Take a portion of the dough and press it down to flatten it slightly. Place a strip of pitted dates in the center.</li>
-        <li>Fold the dough over the dates to encase them completely and shape it into a cylinder. Seal the edges well.</li>
-        <li>Repeat the process with the remaining dough and dates.</li>
-        <li>Preheat your oven to 350°F (175°C).</li>
-        <li>In a deep frying pan, heat vegetable oil over medium heat. Fry the makroudh in batches until they turn golden brown.</li>
-        <li>Remove the fried makroudh from the oil and let them cool on a paper towel to absorb any excess oil.</li>
-        <li>Once the makroudh have cooled, transfer them to a baking sheet and bake them in the preheated oven for about 10-15 minutes until they are crispy and lightly browned.</li>
-        <li>Remove the makroudh from the oven and let them cool completely before serving.</li>
+    <ol class="ingredients-container">
+        <div class="ingredients">
+            <li>In a mixing bowl, combine the semolina, vegetable oil, clarified butter, orange blossom water, rose water, and salt. Mix well until the dough is formed.</li>
+            <li>Knead the dough for about 5-10 minutes until it becomes smooth and pliable.</li>
+            <li>Divide the dough into smaller portions and shape each portion into a small rectangle.</li>
+            <li>Take a portion of the dough and press it down to flatten it slightly. Place a strip of pitted dates in the center.</li>
+            <li>Fold the dough over the dates to encase them completely and shape it into a cylinder. Seal the edges well.</li>
+            <li>Repeat the process with the remaining dough and dates.</li>
+            <li>Preheat your oven to 350°F (175°C).</li>
+            <li>In a deep frying pan, heat vegetable oil over medium heat. Fry the makroudh in batches until they turn golden brown.</li>
+            <li>Remove the fried makroudh from the oil and let them cool on a paper towel to absorb any excess oil.</li>
+            <li>Once the makroudh have cooled, transfer them to a baking sheet and bake them in the preheated oven for about 10-15 minutes until they are crispy and lightly browned.</li>
+            <li>Remove the makroudh from the oven and let them cool completely before serving.</li>
+        </div>
     </ol>
 
 </body>
