--- a/recipes/rfiss.html
+++ b/recipes/rfiss.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Rfiss</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Rfisss</h1>
@@ -10,27 +11,33 @@
     <img src="../img/rfiss.jpg" alt="photo of a traditional rfiss">
     
     <u><h3>Ingedients:</h3></u>
-    <ul>
-        <li>2 cups fine semolina</li>
-        <li>1 cup melted butter or vegetable oil</li>
-        <li>1 cup honey</li>
-        <li>1 teaspoon ground cinnamon</li>
-        <li>1 teaspoon ground anise seeds</li>
-        <li>1/4 teaspoon salt</li>
-        <li>Almonds, pistachios, or other nuts (optional, for garnish)</li>
+    <ul class="ingredients-container">
+        <div class="ingredients">
+            <li>2 cups fine semolina</li>
+            <li>1 cup melted butter or vegetable oil</li>
+            <li>1 cup honey</li>
+            <li>1 teaspoon ground cinnamon</li>
+        </div>
+        <div class="ingredients">
+            <li>1 teaspoon ground anise seeds</li>
+            <li>1/4 teaspoon salt</li>
+            <li>Almonds, pistachios, or other nuts (optional)</li>
+        </div>
     </ul>
     <u><h3>Steps:</h3></u>
-    <ol>
-        <li>In a large mixing bowl, combine the semolina, melted butter or vegetable oil, ground cinnamon, ground anise seeds, and salt. Mix well until the ingredients are evenly combined.</li>
-        <li>Gradually add water while mixing with your hands until the mixture comes together to form a dough. The dough should hold its shape when pressed together.</li>
-        <li>Divide the dough into small portions and shape each portion into small balls or oblong shapes.</li>
-        <li>Place the shaped dough on a clean surface or a baking sheet lined with parchment paper. Allow the dough to dry and harden for about 1-2 days. This step is important for the texture of the Rfiss.</li>
-        <li>Once the dough has dried, preheat the oven to 350°F (175°C).</li>
-        <li>Place the dried dough pieces on a baking sheet and bake in the preheated oven for about 15-20 minutes, or until they turn golden brown.</li>
-        <li>While the Rfiss is baking, heat the honey in a saucepan over low heat until it becomes warm and runny.</li>
-        <li>Remove the baked Rfiss from the oven and immediately dip each piece into the warm honey. Make sure to coat each piece thoroughly.</li>
-        <li>Optional: Garnish the Rfiss with almonds, pistachios, or other nuts while the honey is still sticky.</li>
-        <li>Allow the Rfiss to cool and the honey to set before serving.</li>
+    <ol class="ingredients-container">
+        <div class="ingredients">
+            <li>In a large mixing bowl, combine the semolina, melted butter or vegetable oil, ground cinnamon, ground anise seeds, and salt. Mix well until the ingredients are evenly combined.</li>
+            <li>Gradually add water while mixing with your hands until the mixture comes together to form a dough. The dough should hold its shape when pressed together.</li>
+            <li>Divide the dough into small portions and shape each portion into small balls or oblong shapes.</li>
+            <li>Place the shaped dough on a clean surface or a baking sheet lined with parchment paper. Allow the dough to dry and harden for about 1-2 days. This step is important for the texture of the Rfiss.</li>
+            <li>Once the dough has dried, preheat the oven to 350°F (175°C).</li>
+            <li>Place the dried dough pieces on a baking sheet and bake in the preheated oven for about 15-20 minutes, or until they turn golden brown.</li>
+            <li>While the Rfiss is baking, heat the honey in a saucepan over low heat until it becomes warm and runny.</li>
+            <li>Remove the baked Rfiss from the oven and immediately dip each piece into the warm honey. Make sure to coat each piece thoroughly.</li>
+            <li>Optional: Garnish the Rfiss with almonds, pistachios, or other nuts while the honey is still sticky.</li>
+            <li>Allow the Rfiss to cool and the honey to set before serving.</li>
+        </div>
     </ol>
 </body>
 </html>
